--- a/package/src/app/layouts/full/full.component.html
+++ b/package/src/app/layouts/full/full.component.html
@@ -1,4 +1,4 @@
-<app-topstrip></app-topstrip>
+<!-- <app-topstrip></app-topstrip> -->
 <div class="blue_theme light-theme" autosize autoFocus dir="ltr">
   <!-- ============================================================== -->
   <!-- VerticalHeader -->
@@ -13,7 +13,7 @@
     <mat-sidenav #leftsidenav [mode]="isOver ? 'over' : 'side'" [opened]="!isOver"
       (openedChange)="onSidenavOpenedChange($event)" (closedStart)="onSidenavClosedStart()" class="sidebarNav">
       <div class="flex-layout">
-        <app-sidebar (toggleMobileNav)="sidenav.toggle()" [showToggle]="isOver"></app-sidebar>
+        <!-- <app-sidebar (toggleMobileNav)="sidenav.toggle()" [showToggle]="isOver"></app-sidebar> -->
         <ng-scrollbar class="position-relative" style="height: 100%">
           <mat-nav-list class="sidebar-list">
             @for(item of navItems; track item) {
@@ -22,7 +22,7 @@
             }
           </mat-nav-list>
         </ng-scrollbar>
-        <div class="p-20">
+        <!-- <div class="p-20">
           <div class="bg-light-secondary d-flex align-items-center gap-4 rounded p-20 m-t-20">
             <div>
               <h5 class="f-s-16 f-w-600 m-b-8"> Check Pro <br> Version </h5><a mat-flat-button=""
@@ -34,7 +34,7 @@
                   class="mat-mdc-button-touch-target"></span></a>
             </div><img src="/assets/images/backgrounds/rocket.png" alt="imgae" class="side-img m-t--48 m-r--8">
           </div>
-        </div>
+        </div> -->
       </div>
     </mat-sidenav>
 
