--- a/package/src/app/pages/data-classifiers/data-classifiers.component.html
+++ b/package/src/app/pages/data-classifiers/data-classifiers.component.html
@@ -54,7 +54,7 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button [matMenuTriggerFor]="rowMenu" aria-label="Row actions">
-            <mat-icon>more_horiz</mat-icon>
+            <mat-icon>more_vert</mat-icon>
           </button>
         </td>
       </ng-container>
